# market-spread-api

./: Dockerfile  README.md  pyproject.toml
project/: settings.py  urls.py
scripts/: run_tests.sh
spread/: apps.py  models.py  serializers.py  views.py
spread/clients/buda/: __init__.py  client.py  tests.py  types.py
spread/services/: __init__.py  markets.py  spread.py  spread_alert.py  types.py
spread/tests/: test_client.py  test_services.py
